--- a/templates/your_course.html
+++ b/templates/your_course.html
@@ -1,8 +1,20 @@
 {% extends 'base.html' %}
-{% block title %}{% if course %}{{ course }}{% endif %}{% endblock %}
+{% block title %}Search result{% endblock %}
 
 
 {% block main %}
+    {% if outline %}
+        {% for key, value in outline.items() %}
+            <p id="{{ key }}">{{ value }} </p>
+        {% endfor %}
+    {% endif %}
+
+    {% if rating %}
+        {% for key, value in rating.items() %}
+            <p id="{{ key }}">{{ key }}: {{ value }} </p>
+        {% endfor %}
+    {% endif %}
+
     <p>
         <a href="{{ url_for('home') }}">
             <button>Find another course</button>
