Fix bug in prof_scrape, format text in html

--- a/templates/home.html
+++ b/templates/home.html
@@ -1,9 +1,9 @@
 {% extends 'base.html' %}
-{% block title %}Course Finder{% endblock %}
+{% block title %}CMPT Course Finder{% endblock %}
 
 {% block main %}
     <div class="container text-center">
-        <h1 class="jumbotron-heading">Pick your course</h1>
+        <h1 class="jumbotron-heading">Pick your course for Summer 2021</h1>
         <form action="your-course" method="post">
             <label for="course" >Course</label>
             <select name="course" id="course">
